test/validation/subrange/test-variable-boundary/p.pas
program test_variable_boundary;
const
    a = 1;
    b = 10;
var
    c, d: integer;
type
    r = a..b;
    s = a..d;
begin
end.
