test/error/var/test-var-dec-init-wrong-type/p.pas
program test_var_dec_init_wrong_type;
var
    s: string[10] = 'hello';
    t: array [1..2] of integer = (true, false);
begin
end.
